# sport

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_SoftwareProject.md
adminpage/: Dockerfile  docker-entrypoint.sh  pyproject.toml  pytest.ini
adminpage/accounts/: models.py
adminpage/adminpage/: apps.py  asgi.py  authentication.py  context_processors.py  schema.py  settings.py  storage.py  urls.py
adminpage/api/: permissions.py  urls.py
adminpage/api-v2/: urls.py
adminpage/api-v2/serializers/: __init__.py  attendance.py  medical_groups.py  reference.py
adminpage/api-v2/views/: profile.py
adminpage/api/crud/: __init__.py  crud_attendance.py  crud_faq.py  crud_fitness_test.py  crud_groups.py  crud_schedule.py  crud_semester.py  crud_training.py  crud_training_class.py  crud_users.py  utils.py
adminpage/api/fixtures/: model_creation.py  user_creation.py
adminpage/api/middleware/: sso_stub.py
adminpage/api/serializers/: __init__.py  attendance.py  calendar.py  faq.py  fitness_test.py  group.py  profile_serializers.py  reference.py  self_sport_report.py  semester.py  sport.py  student.py  training.py  training_class.py
adminpage/api/views/: analytics.py  attendance.py  calendar.py  enroll.py  faq.py  fitness_test.py  group.py  measurement.py  medical_groups.py  permissions.py  profile.py  profile_views.py  reference.py  semester.py  (+4 more)
adminpage/api1/: permissions.py  urls.py
adminpage/api_v2/: urls.py
adminpage/api_v3/: app.py  dependencies.py  docs.py  permissions.py
adminpage/media/: views.py
adminpage/sport/: apps.py  urls.py
(+230 files in other folders)
